# trusts

./: Anchor.toml  README.md
app/trusts-ui/: .env.example  package-lock.json  package.json  tailwind.config.ts
app/trusts-ui/config/: seo.config.ts
app/trusts-ui/src/components/: create-form.tsx  create-grid.tsx  footer.tsx  header.tsx  vault-grid.tsx
app/trusts-ui/src/components/ui/: animated-gradient-text.tsx  back-to-home.tsx  connected-button.tsx  github-button.tsx  grid-pattern.tsx  hero-button.tsx  retro-grid.tsx  ripple.tsx  tooltip.tsx  vault-card.tsx  wallet-modal.tsx
app/trusts-ui/src/lib/schemas/: create.ts
app/trusts-ui/src/lib/types/: create.ts
app/trusts-ui/src/pages/: 404.tsx  _app.tsx  create.tsx  index.tsx  my-trusts.tsx  vaults.tsx
app/trusts-ui/src/providers/: SolanaProvider.tsx
app/trusts-ui/src/solana/methods/: depositVault.ts  initVault.ts
app/trusts-ui/src/solana/source/: connection.ts  program.ts  provider.ts
app/trusts-ui/src/solana/source/idl/: idl.ts
programs/lulo/: Cargo.toml  idl.json
programs/lulo/src/: lib.rs
programs/trusts/: Cargo.toml
programs/trusts/src/: error.rs  lib.rs
programs/trusts/src/instructions/: close_vault.rs  deposit.rs  deposit_into_protocol.rs  init_vault.rs  make_contributions.rs  mod.rs  withdraw.rs  withdraw_from_protocol.rs
programs/trusts/src/state/: vault.rs
sdk/: .solitarc.js  package.json
sdk/idl/: trusts.json
tests/: trusts.ts
